REGRESSION: [Mac wk1] imported/w3c/web-platform-tests/mathml/presentation-markup/scripts/underover-parameters-3.html is a flakey failure https://bugs.webkit.org/show_bug.cgi?id=205168

Reviewed by Simon Fraser.

Source/WebCore:

The flakiness of the test was caused by document.fonts.ready resolving without waiting for the document
to be loaded if FontFaceSet::FontFaceSet is created after the initial layout had been done.

r249295 introduced this racy code to address the previous behavior of WebKit, which didn't wait for
either document to finish loading or the initial layout to happen at all, and the WebKit workaround in
the offending WPT test was subsequentially removed, resulting in the flaky failure after the test was
synced up in r249760.

This patch address the underlying bug by making ready promise wait until Document::implicitClose is called.

Unfortunately, the specification is extremely vague in terms of when this promise is resolved but new
behavior of WebKit is more or less with Firefox (Chrome seems to have a similar race condition as WebKit).

See also: https://github.com/w3c/csswg-drafts/issues/4248.

Test: fast/css/font-face-set-ready-after-document-load.html

* css/CSSFontSelector.cpp:
(WebCore::CSSFontSelector::fontFaceSetIfExists): Renamed from optionalFontFaceSet for consistency.
* css/CSSFontSelector.h:
* css/FontFaceSet.cpp:
(WebCore::FontFaceSet::FontFaceSet): Fixed the bug.
(WebCore::FontFaceSet::documentDidFinishLoading): Renamed from didFirstLayout to reflect the new semantics.
(WebCore::FontFaceSet::completedLoading):
* css/FontFaceSet.h:
* dom/Document.cpp:
(WebCore::Document::implicitClose): Deployed makeRefPtr to be safe.

LayoutTests:

* fast/css/font-face-set-ready-after-document-load-expected.txt: Added.
* fast/css/font-face-set-ready-after-document-load.html: Added.


Canonical link: https://commits.webkit.org/220000@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255414 268f45cc-cd09-0410-ab3c-d52691b4dbfc