Source/WebCore/css/FontFaceSet.h
@@ -60,7 +60,7 @@ public:
 
     using ReadyPromise = DOMPromiseProxyWithResolveCallback<IDLInterface<FontFaceSet>>;
     ReadyPromise& ready() { return m_readyPromise.get(); }
-    void didFirstLayout();
+    void documentDidFinishLoading();
 
     CSSFontFaceSet& backing() { return m_backing; }
 
@@ -118,7 +118,8 @@ private:
     Ref<CSSFontFaceSet> m_backing;
     HashMap<RefPtr<FontFace>, Vector<Ref<PendingPromise>>> m_pendingPromises;
     UniqueRef<ReadyPromise> m_readyPromise;
-    bool m_isFirstLayoutDone { true };
+
+    bool m_isDocumentLoaded { true };
 };
 
 }
